--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "md5": "^2.2.1",
     "moment": "^2.24.0",
     "react": "^16.9.0",
+    "react-avatar-editor": "^12.0.0-beta.0",
     "react-color": "^2.17.3",
     "react-dom": "^16.9.0",
     "react-redux": "^7.1.1",
