--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "emoji-mart": "^2.11.1",
     "firebase": "^6.5.0",
     "md5": "^2.2.1",
     "moment": "^2.24.0",
